Fix margin between scrollbar and task card

--- a/frontend/src/components/GroupView/RightView/GroupTask.module.scss
+++ b/frontend/src/components/GroupView/RightView/GroupTask.module.scss
@@ -1,17 +1,15 @@
 .GroupTask {
   font-size: 12px;
   color: white;
-  margin-right: 14px;
+  margin-left: 14px;
   // height: 100%;
   padding-top: 8px;
-  // width: 240px;
 }
 
 .GroupTaskContainer {
   height: 200px;
-  width: 240px;
+  min-width: 250px;
   overflow-x: hidden;
   padding: 0;
-  // margin-right: 0 !important;
   overflow-y: scroll;
 }
